covid19 page fix

--- a/frontend/src/app/pages/covid19/covid19.component.html
+++ b/frontend/src/app/pages/covid19/covid19.component.html
@@ -6,5 +6,5 @@
         {{data.title}}
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <a mat-button *ngFor="let file of data.files" class="file-link" href="file.path" target="_blank"><mat-icon>picture_as_pdf</mat-icon>&emsp;{{file.title}}</a><br/>
+    <a mat-button *ngFor="let file of data.files" class="file-link" href="{{file.path}}" target="_blank"><mat-icon>picture_as_pdf</mat-icon>&emsp;{{file.title}}</a><br/>
   </mat-expansion-panel>
